--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ potus_twitter_project.zip
 potus_twitter_project/__MACOSX/
 potus_twitter_project/*.json
 potus_twitter_project/*_vectors.*
+./interviews
